lower header. Book content can be scrolled while body cannot if the it is active. Need this to prevent strange effects on mobile devices. touch bookContent make virtual keyboard go away

--- a/_css/style.css
+++ b/_css/style.css
@@ -3,6 +3,16 @@ html, body {
   tap-highlight-color: transparent;
   -webkit-tap-highlight-color: transparent; }
 
+/*#hugeWrapper{
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+}*/
+/*#main{
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+}*/
 #spaceholder {
   position: relative;
   /*margin-top: $mobileUpperHeight + $mobileLowerHeight;*/
@@ -32,6 +42,10 @@ html, body {
   /*border-radius: 5px;*/
   box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
   /*transition: opacity .2s ease-in-out;*/ }
+
+.noScroll {
+  height: 100%;
+  overflow: hidden; }
 
 /*MOBILE UPPER*/
 #mobileUpperHeader {
@@ -82,7 +96,7 @@ html, body {
   position: absolute;
   top: 8px;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   font-family: 'Avenir Next LT Pro Regular';
   color: #000;
   line-height: 30px;
@@ -102,6 +116,82 @@ html, body {
   transition: transform .2s;
   transition-timing-function: linear;
   /*transform: translate(0px,100px);*/ }
+
+#mobileEmailOuter {
+  position: relative;
+  width: 94%;
+  height: 42px;
+  top: 8px;
+  margin-left: 3%;
+  border: 1px solid #eee;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border-radius: 5px;
+  overflow: hidden;
+  /*background: red;*/ }
+
+#menuBookTitle {
+  float: left;
+  /*transform: translate(-100px,0px);*/
+  padding-left: 5.4%;
+  width: 100px;
+  height: 100%;
+  line-height: 42px;
+  text-align: left;
+  vertical-align: center;
+  font-size: 16px;
+  color: #000;
+  font-family: 'Avenir Next LT Pro Regular';
+  /*background-color: red;*/ }
+
+#menuBookInputBox {
+  float: left;
+  height: 100%;
+  /*background-color: blue;*/ }
+
+#menuBookInputBox input {
+  height: 100%;
+  width: 100%;
+  border: none;
+  line-height: 42px;
+  text-align: left;
+  vertical-align: center;
+  font-size: 16px;
+  font-family: 'Avenir Next LT Pro Regular';
+  box-shadow: none;
+  padding: 0px;
+  margin: 0px;
+  border: none; }
+
+#menuBookInputBox input::placeholder {
+  font-family: FontAwesome,'Avenir Next LT Pro Regular';
+  font-size: 16px;
+  padding-left: 2px;
+  letter-spacing: 1px;
+  color: 000;
+  opacity: 0.2;
+  /*font-size: 16px;*/ }
+
+input[type=email]:focus, textarea:focus {
+  outline: 0; }
+
+#menuBookSendButton {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 60px;
+  height: 100%;
+  opacity: 0.2; }
+
+#menuBookSendButton i {
+  height: 100%;
+  width: 100%;
+  line-height: 42px;
+  text-align: center;
+  vertical-align: center;
+  font-size: 20px;
+  /*background: red;*/ }
 
 /*MOBILE MENU*/
 #mobileMenu {
@@ -163,10 +253,44 @@ html, body {
   top: 100%;
   width: 100%;
   height: 100%;
-  background: url(../_img/IMG_5832.JPG);
-  /*background: #fff;*/
+  /*background: url(../_img/IMG_5832.JPG);*/
+  background: #fff;
   transition: transform .2s;
-  transition-timing-function: linear; }
+  transition-timing-function: linear;
+  overflow-y: scroll; }
+
+#mobileBookText {
+  position: absolute;
+  top: 0;
+  width: 84%;
+  padding-left: 8%;
+  height: auto;
+  /*background: url(../_img/IMG_5832.JPG);*/
+  background: #fff;
+  transition: transform .2s;
+  transition-timing-function: linear;
+  color: #999; }
+
+#mobileMailFeedback {
+  height: 50px;
+  width: 100%;
+  /*background: red;*/
+  /*color: #000;*/
+  font-size: 16px;
+  font-family: 'Avenir Next LT Pro Regular'; }
+
+#mobileBookText h3 {
+  /*color: #000;*/
+  font-size: 30px;
+  letter-spacing: 1px;
+  font-family: 'Avenir Next LT Pro Regular'; }
+
+#mobileBookText p {
+  /*color: #000;*/
+  padding-top: 20px;
+  font-size: 25px;
+  letter-spacing: 1px;
+  font-family: 'Avenir Next LT Pro Regular'; }
 
 /*BASKERVILLE*/
 @font-face {
